[gd_scene load_steps=4 format=2]

[ext_resource path="res://GameOver.gd" type="Script" id=1]
[ext_resource path="res://dynamicfont-sourcecode.tres" type="DynamicFont" id=2]
[ext_resource path="res://font-sourcecode-16.tres" type="DynamicFont" id=3]

[node name="GameOverRoot" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 640.0
color = Color( 0.45098, 0.0627451, 0.152941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 40
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverText" type="Label" parent="CanvasLayer/VBoxContainer"]
margin_top = 146.0
margin_right = 1024.0
margin_bottom = 187.0
custom_fonts/font = ExtResource( 2 )
text = "Game Over!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GrassCutTotal" type="Label" parent="CanvasLayer/VBoxContainer"]
margin_top = 227.0
margin_right = 1024.0
margin_bottom = 248.0
custom_fonts/font = ExtResource( 3 )
text = "Grass Cut: "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GrassLeft" type="Label" parent="CanvasLayer/VBoxContainer"]
margin_top = 288.0
margin_right = 1024.0
margin_bottom = 309.0
custom_fonts/font = ExtResource( 3 )
text = "Grass remaining: "
align = 1

[node name="TimeElapsed" type="Label" parent="CanvasLayer/VBoxContainer"]
margin_top = 349.0
margin_right = 1024.0
margin_bottom = 370.0
custom_fonts/font = ExtResource( 3 )
text = "Time Elapsed:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeaderInputHBox" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_top = 410.0
margin_right = 1024.0
margin_bottom = 434.0
custom_constants/separation = 20
alignment = 1

[node name="EnterNameLabel" type="Label" parent="CanvasLayer/VBoxContainer/LeaderInputHBox"]
margin_left = 354.0
margin_top = 1.0
margin_right = 514.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 3 )
text = "Enter Your Name:"

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/VBoxContainer/LeaderInputHBox"]
margin_left = 534.0
margin_right = 592.0
margin_bottom = 24.0
text = "Mower"
max_length = 30

[node name="SubmitNameButton" type="Button" parent="CanvasLayer/VBoxContainer/LeaderInputHBox"]
margin_left = 612.0
margin_right = 669.0
margin_bottom = 24.0
text = "Submit"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_top = 474.0
margin_right = 1024.0
margin_bottom = 494.0
custom_constants/separation = 60
alignment = 1

[node name="MainMenuButton" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
margin_left = 362.0
margin_right = 445.0
margin_bottom = 20.0
custom_constants/hseparation = 10
text = "Main Menu"

[node name="RestartButton" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
margin_left = 505.0
margin_right = 562.0
margin_bottom = 20.0
custom_constants/hseparation = 10
text = "Restart"

[node name="QuitButton" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
margin_left = 622.0
margin_right = 662.0
margin_bottom = 20.0
custom_constants/hseparation = 10
text = "Quit"
[connection signal="pressed" from="CanvasLayer/VBoxContainer/LeaderInputHBox/SubmitNameButton" to="." method="_on_SubmitNameButton_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
